# desi-rv-audit

./: .gitignore  CITATION.cff  DATA_LICENSE_AND_ACKNOWLEDGMENTS.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: tests.yml
data/: synthetic_epochs.csv
reports/: desi_main_audit_report.md  desi_main_program_night_audit.md
reports/program_night_artifacts/: by_program.csv  correction_summary.csv  diagnostic_offsets_program_night.csv  pair_cap_sensitivity.csv  permutation_summary.csv  reproducibility.csv  run_manifest.json  summary.csv
scripts/: download_main_bundle.ps1  download_main_bundle.sh  run_demo.sh
src/desi_rv_audit/: __init__.py  calibration.py  cli.py  corrections.py  downloads.py  io.py  manifest.py  pairs.py  pipeline.py  plots.py  program_night.py  quality.py  report.py  residuals.py  schema.py  stats.py
tests/: test_corrections.py  test_downloads.py  test_io.py  test_manifest.py  test_pairs.py  test_pipeline.py  test_program_night.py  test_quality.py  test_residuals.py  test_schema.py  test_stats.py
