[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desi-rv-audit"
version = "0.2.1"
description = "Auditable multi-epoch radial-velocity QC for DESI-like stellar catalogues"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Maksim Kudriavtsev"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
fits = ["astropy>=5.3"]
parquet = ["pyarrow>=14"]
dev = ["pytest>=7.4", "matplotlib>=3.7"]

[project.scripts]
desi-rv-audit = "desi_rv_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
